[gd_scene load_steps=10 format=2]

[ext_resource path="res://Overlap/HurtHit_Box/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Overlap/HurtHit_Box/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Stats/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boss/Boss_template.gd" type="Script" id=4]
[ext_resource path="res://testSprites/white_boss_dog.png" type="Texture" id=5]
[ext_resource path="res://Overlap/Kind.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 18.0
height = 18.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.0
height = 18.0

[sub_resource type="CircleShape2D" id=3]
radius = 12.5

[node name="Boss_template" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Kind" parent="." instance=ExtResource( 6 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.13451, -20.1418 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
hframes = 60

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 0

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -15 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.52588e-05, 0 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="DebugLabel" type="Label" parent="."]
margin_left = -42.2456
margin_top = -65.04
margin_right = 42.7544
margin_bottom = -48.04
text = "Obermufti"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" parent="." instance=ExtResource( 3 )]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
